prevent user select on invisible list label right slot

--- a/src/ui/pages/TalentsPage/components/ListLabelRight/ListLabelRight.module.css
+++ b/src/ui/pages/TalentsPage/components/ListLabelRight/ListLabelRight.module.css
@@ -11,10 +11,14 @@
     font-family: fontin-sans-regular;
     font-size: 12px;
 
+    user-select: none;
+
     opacity: 0;
     transition: opacity 300ms ease;
 }
 
 .visible {
     opacity: 0.9;
+
+    user-select: unset;
 }
